--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "U3D",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
-      "dev": "vite",
-      "build": "vite build"
+    "dev": "vite & node ./src/api/mock/mock.js",
+    "build": "vite build"
   },
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.4",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "mockjs": "^1.1.0",
     "vue": "^3.0.4"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "@vue/compiler-sfc": "^3.0.4",
     "sass": "^1.30.0",
     "three": "^0.123.0",
