--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,18 @@
 {
-  "version": "0.2.0",
+  "version": "0.1.0",
   "configurations": [
-    {
-      "type": "chrome",
-      "request": "launch",
-      "name": "vuejs: chrome",
-      "url": "http://localhost:3000/",
-      "webRoot": "${workspaceFolder}/src",
-      "breakOnLoad": true,
-      "sourceMapPathOverrides": {
-        "webpack:///src/*": "${webRoot}/*"
-      }
-    },
-    {
-      "type": "firefox",
-      "request": "launch",
-      "name": "vuejs: firefox",
-      "url": "http://localhost:8080",
-      "webRoot": "${workspaceFolder}/src",
-      "pathMappings": [{ "url": "webpack:///src/", "path": "${webRoot}/" }]
-    }
+      {
+          "name": "Launch localhost",
+          "type": "chrome",
+          "request": "launch",
+          "url": "http://localhost:3000/",
+          "webRoot": "${workspaceFolder}"
+      },
+      {
+          "name": "Launch index.html",
+          "type": "chrome",
+          "request": "launch",
+          "file": "${workspaceFolder}/index.html"
+      },
   ]
 }
