--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "U3D",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon ./src/api/mock/mock.js & vite",
+    "dev": "concurrently \"nodemon ./src/api/mock/mock.js\" \"vite\"",
     "build": "vite build"
   },
   "dependencies": {
@@ -11,14 +11,17 @@
     "vue": "^3.0.4"
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.0.4",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "@vue/compiler-sfc": "^3.0.4",
+    "mockjs": "^1.1.0",
     "sass": "^1.30.0",
     "three": "^0.123.0",
     "vite": "^1.0.0-rc.13",
     "vite-plugin-mock": "^1.0.9",
     "vue-router": "^4.0.0-beta.13",
     "vuex": "^4.0.0-rc.2"
-  }
+  },
+  "_id": "U3D@1.0.0"
 }
